# PyFVTool

./: .buildinfo  .gitattributes  .gitignore  .readthedocs.yaml  AGENTS.md  AUTHORS  CONTRIBUTING.md  LICENSE  README.md  changelog.html  contributing.html  dev_story.py  dev_temp.py  fvtool_debug.py  fvtool_test.py  genindex.html  index.html  installation.html  objects.inv  origin_story.html  plan_unstructured.md  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  scope_and_limitations.html  search.html  searchindex.js  setup.py  test_dev.py
.doctrees/: changelog.doctree  contributing.doctree  index.doctree  installation.doctree  origin_story.doctree  quickstart.doctree  scope_and_limitations.doctree
_modules/: index.html
_sources/: index.md.txt  installation.md.txt
api/: index.html
docs/: README.md  changelog.md  conf.py  contributing.md  coordinate_labels.md  dev-testing.md  functions_and_classes.md  index.md  installation.md  origin_story.md  quickstart.md  requirements.txt  scope_and_limitations.md
examples/: 1d_conv_diff_bench.py  1d_diffusion.py  FVTdemo.ipynb  cylindrical1D_diffusion.ipynb  diffusion_explicit.py  diffusion_explicit_2d.py  heat_1D_bench.py  heat_1D_bench2.py  index.html  spherical1D_diffusion.py  test_runs.py
examples-notebooks/: FVTdemo.ipynb  PyFVTool-introduction-demo.ipynb  cartesian1D_diffusion_explicit.ipynb  cartesian1D_heat_equation_neumann.ipynb  cartesian1d_heat_equation_variant.ipynb  cylindrical1D_diffusion.ipynb  cylindrical1D_diffusion_source_photothermal.ipynb  cylindrical1D_diffusion_steady.ipynb  cylindrical2D_convection_Taylor.ipynb  cylindrical2D_convection_Taylor_new_solvePDE.ipynb  grid1d_diffusion_advection_mason_weaver.ipynb  how-to-use-oneMKL-PARDISO-solver.ipynb  how-to-use-pypardiso-as-external-solver.ipynb  how-to-use-pypardiso-numpy2.ipynb  how-to-use-pypardiso.ipynb  spherical1D_diffusion.ipynb  spherical_coordinate_examples.ipynb  tutorial-poisson_example.ipynb  tutorial-variables_in_space.ipynb  tutorial-wave_equation_1D.ipynb
pyfvtool/: __init__.py  advection.py  averaging.py  boundary.py  calculus.py  cell.py  diffusion.py  face.py  mesh.py  pdesolver.py  solver.py  source.py  test_dev.py  utilities.py  visualization.py
src/: __init__.py  advection.py  averaging.py  boundary.py  calculus.py  cell.py  cellvalue.py  diffusion.py  face.py  mesh.py  solver.py  source.py  test_dev.py  utilities.py  visualization.py
test/: __init__.py  test_benchmark_1d.py
tests/: __init__.py  fvtool_basic_test.py  test.py  test_BC_utility_methods.py  test_CellVariable_copy.py  test_CellVariable_methods.py  test_PyFVTool_basic_test.py  test_PyFVTool_introduction_demo.py  test_README_script.py  test_TrackedArray.py  test_benchmark_1d.py  test_cell_volumes.py  test_coordinate_labels.py  test_cylindrical1D_diffusion.py  test_cylindrical1D_diffusion_source_photothermal.py  test_cylindrical1D_diffusion_steady.py  test_cylindrical2D_convection_Taylor.py  test_facevariable.py  test_fvtool_basic_test.py  test_oneMKL_PARDISO_interface.py  test_pdesolver.py  test_pdesolver_mason_weaver.py  test_runs.py  test_spherical1D_diffusion.py  test_spherical_coordinate.py  test_spherical_coordinate_examples.py  test_unstructured_mesh.py  test_visualization.py
(+142 files in other folders)
