# minimalist pyproject.toml

[project]
name = "pyfvtool"
version = "0.3.3"
authors = [
    { name="Ali A. Eftekhari", email="e.eftekhari@gmail.com" },
    { name="Gavin M. Weir"},
    { name="Martinus H. V. Werts"}
]
description = "Finite volume toolbox in Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
        "numpy>=1.23.0",
        "scipy>=1.11.0",
		"matplotlib"
        ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
"Homepage" = "https://github.com/FiniteVolumeTransportPhenomena/PyFVTool"
"Bug Tracker" = "https://github.com/FiniteVolumeTransportPhenomena/PyFVTool/issues"

[build-system]
requires = ["setuptools>=61.0", "numpy>=1.23.0", "scipy>=1.11.0", "matplotlib"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
