# minimalist pyproject.toml for PyFVTool

[project]
name = "pyfvtool"
version = "0.4.2"
authors = [
    { name="Ali A. Eftekhari", email="aliak@dtu.dk" },
    { name="Martinus H. V. Werts", email="martinus.werts@univ-angers.fr" }
]
description = "Finite-volume toolbox in Python"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics"
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
        "numpy>=2",
        "scipy",
		"matplotlib"
        ]


[project.urls]
"Homepage" = "https://github.com/FiniteVolumeTransportPhenomena/PyFVTool"
"Bug Tracker" = "https://github.com/FiniteVolumeTransportPhenomena/PyFVTool/issues"

[build-system]
requires = ["setuptools>=61.0", "numpy>=2", "scipy", "matplotlib"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
